log/build_2022-10-30_15-45-47/trial_topic/stderr.log
  File "/home/jeong/trial_ws/install/trial_topic/lib/python3.8/site-packages/trial_topic/trial_subscriber.py", line 30
    if __name__=='__main__'
                           ^
SyntaxError: invalid syntax

